# CG-Notebook

00~HelloWorldDemo/: index.html  index.js
01~MagicObject/: index.html  index.js
01~MagicObject/glsl/: item.vs.glsl  magic.fs.glsl  wizard.fs.glsl  wizard.vs.glsl
04~SimpleCube/: index.html  index.js
05~SimpleCube/: index.js
06~TextureCube/: index.html  index.js
07~VideoCube/: index.js
08~AlphaComposite/: index.html  index.js
A1/part1/: A1.html  A1.js  README.txt
A1/part1/glsl/: item.fs.glsl  magic.vs.glsl
A1/part2/glsl/: item.fs.glsl  item.vs.glsl  magic.vs.glsl  wizard.fs.glsl  wizard.vs.glsl
A2/a2-part1-release-master/: A2-P1.html  A2-P1.js  README.txt
A2/a2-part1-release-master/glsl/: eye.fs.glsl  eye.vs.glsl  laser.fs.glsl  laser.vs.glsl  magic.fs.glsl  scorch.fs.glsl  wizard.vs.glsl
A2/a2-part2-release-master/: A2-P2.html  A2-P2.js  README.txt
A2/a2-part2-release-master/armature/: armadillo.gltf
A2/a2-part2-release-master/glsl/: eye.vs.glsl  magic.vs.glsl  noddingArmadillo.fs.glsl  noddingArmadillo.vs.glsl  scorch.vs.glsl  skinningArmadillo.fs.glsl  skinningArmadillo.vs.glsl  wizard.fs.glsl
A3/a3-release-master/: A3.html  A3.js  README.txt
A3/a3-release-master/glsl/: anisotropic.fs.glsl  anisotropic.vs.glsl  fog.fs.glsl  fog.vs.glsl  gooch.fs.glsl  gooch.vs.glsl  hatch.fs.glsl  hatch.vs.glsl  phong_blinn.fs.glsl  phong_blinn.vs.glsl  spotlight.fs.glsl  (+3 more)
A4/a4-release-master/: A4.html  A4.js  A4.tex  README.txt
StartTest/: CMakeLists.txt  glmatrix.cpp  main.cpp
TriangleSquare/: TriangleSquare.sln  TriangleSquare.vcxproj
(+6 files in other folders)
